editors/tree-sitter-tynix/grammar.js
    source_code: ($) =>
      seq(
        repeat(field("declaration", choice($.type_alias, $.ambient_declaration, $.macro_declaration))),
        optional(field("expression", $._expression)),
      ),

    // ---------------------------------------------------------------------
    // tynix declarations

    type_alias: ($) =>
      seq(
        optional(field("modifier", alias("opaque", $.opaque))),
        "type",
        field("name", alias($.identifier, $.type_identifier)),
        repeat(field("parameter", choice(alias($.identifier, $.type_variable), $.kinded_parameter))),
        "=",
        field("type", $._type),
        ";",
      ),

    // `(f :: Type -> Type)`
    kinded_parameter: ($) =>
      seq("(", field("name", alias($.identifier, $.type_variable)), "::", field("kind", $._kind), ")"),

    _kind: ($) => choice($.kind_arrow, $._kind_atom),

    kind_arrow: ($) => prec.right(seq(field("parameter", $._kind_atom), "->", field("result", $._kind))),

    _kind_atom: ($) => choice(alias($.identifier, $.kind), alias("*", $.kind), seq("(", $._kind, ")")),

    // ---------------------------------------------------------------------
    // Macros

    macro_declaration: ($) =>
      seq("macro", field("name", $.identifier), "{", repeat(field("rule", $.macro_rule)), "}", ";"),

    macro_rule: ($) =>
      seq(
        field("pattern", $.macro_token_tree),
        "=>",
        field("template", $.macro_token_tree),
        ";",
      ),

    macro_token_tree: ($) => seq("(", repeat($._macro_token), ")"),

    _macro_token: ($) =>
      choice(
        $.macro_token_tree,
        $.macro_repetition,
        $.metavariable,
        $.macro_invocation,
        seq("[", repeat($._macro_token), "]"),
        seq("{", repeat($._macro_token), "}"),
        $.string_expression,
        $.indented_string_expression,
        $.integer_expression,
        $.float_expression,
        $.path_expression,
        $.identifier,
        $.macro_punctuation,
      ),

    // `$( ... ),*`
    macro_repetition: ($) =>
      seq("$(", repeat($._macro_token), ")", optional(choice(",", ";")), choice("*", "+", "?")),

    // `$name`, `$name:fragment`
    metavariable: ($) =>
      seq(
        field("name", alias(token(seq("$", /[a-zA-Z_][a-zA-Z0-9_'\-]*/)), $.metavariable_name)),
        optional(seq(token.immediate(":"), field("fragment", alias(token.immediate(/expr|ident|type|string/), $.fragment)))),
      ),

    macro_punctuation: (_) => token(prec(-1, /[=<>\-+*\/!&|:.?@%^~,;]+/)),

    // `name!( ... )`
    macro_invocation: ($) =>
      prec(
        1,
        seq(
          field("name", $.identifier),
          token.immediate("!"),
          token.immediate("("),
          repeat(field("argument", $._macro_token)),
          ")",
        ),
      ),

    type_signature: ($) =>
      seq(field("name", $._signature_name), "::", field("type", $._type), ";"),

    _signature_name: ($) => choice($.identifier, $.string_expression),

    // ---------------------------------------------------------------------
    // Expressions

    _expression: ($) => $._expr_function_expression,

    _expr_function_expression: ($) =>
      choice(
        $.function_expression,
        $.assert_expression,
        $.with_expression,
        $.let_expression,
        $.if_expression,
        $._expr_op,
      ),

    let_expression: ($) =>
      seq("let", optional($.binding_set), "in", field("body", $._expr_function_expression)),

    _expr_apply_expression: ($) => choice($.apply_expression, $._expr_select_expression),

    apply_expression: ($) =>
      seq(field("function", $._expr_apply_expression), field("argument", $._expr_select_expression)),

    _expr_select_expression: ($) => choice($.select_expression, $._expr_simple),

    select_expression: ($) =>
      choice(
        seq(field("expression", $._expr_simple), ".", field("attrpath", $.attrpath)),
        seq(
          field("expression", $._expr_simple),
          ".",
          field("attrpath", $.attrpath),
          "or",
          field("default", $._expr_select_expression),
        ),
      ),

    _expr_simple: ($) =>
      choice(
        $.variable_expression,
        $.integer_expression,
        $.float_expression,
        $.string_expression,
        $.indented_string_expression,
        $.path_expression,
        $.hpath_expression,
        $.spath_expression,
        $.uri_expression,
        $.macro_invocation,
        $.parenthesized_expression,
        $.attrset_expression,
        $.let_attrset_expression,
        $.rec_attrset_expression,
        $.list_expression,
      ),

    identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_'\-]*/,

    variable_expression: ($) => field("name", $.identifier),

    integer_expression: (_) => /[0-9]+/,

    parenthesized_expression: ($) =>
      seq("(", field("expression", $._expression), optional(seq("::", field("type", $._type))), ")"),

    attrset_expression: ($) => seq("{", optional($.binding_set), "}"),

    binding_set: ($) =>
      repeat1(field("binding", choice($.binding, $.inherit, $.inherit_from, $.type_signature))),

    binding: ($) =>
      seq(field("attrpath", $.attrpath), "=", field("expression", $._expression), ";"),

    attrpath: ($) => seq(field("attr", $._attr), repeat(seq(".", field("attr", $._attr)))),

    _attr: ($) => choice($.identifier, $.string_expression, $.interpolation),

    _type: ($) =>
      choice(
        $.forall_type,
        $.constrained_type,
        $.conditional_type,
        $.function_type,
        $.union_type,
        $.type_application,
        $._type_atom,
      ),

    forall_type: ($) =>
      seq(
        "forall",
        repeat1(field("variable", alias($.identifier, $.type_variable))),
        ".",
        field("body", $._type),
      ),

    function_type: ($) =>
      prec.right(
        PREC.type,
        seq(
          field("parameter", choice($._type_union, $.dependent_parameter)),
          optional(alias("%1", $.multiplicity)),
          "->",
          optional(field("captures", $.capture_set)),
          field("result", $._type),
          optional(field("effects", $.effect_row)),
        ),
      ),

    // `(n :: Nat) -> Vec n a`
    dependent_parameter: ($) =>
      seq("(", field("name", alias($.identifier, $.type_variable)), "::", field("type", $._type), ")"),

    // `->{fetch, log}`, glued to the arrow.
    capture_set: ($) =>
      seq(token.immediate("{"), optional(commaSep1(field("capability", $.identifier))), "}"),

    // `! { Trace, Throw | e }`, `! e`, `! {}`
    effect_row: ($) =>
      seq(
        "!",
        choice(
          seq(
            "{",
            optional(commaSep1(field("effect", alias($.identifier, $.effect_label)))),
            optional(seq("|", field("tail", alias($.identifier, $.type_variable)))),
            "}",
          ),
          field("tail", alias($.identifier, $.type_variable)),
        ),
      ),

    _type_union: ($) => choice($.union_type, $._type_app),

    type_application: ($) =>
      prec.left(
        PREC.type,
        seq(field("constructor", $._type_atom), repeat1(field("argument", $._type_atom))),
      ),

    _type_atom: ($) =>
      choice(
        $.parenthesized_type,
        $.record_type,
        $.type_list,
        $.builtin_type,
        $.infer_type,
        $.literal_type,
        alias($.identifier, $.type_identifier),
      ),

    parenthesized_type: ($) => seq("(", field("type", $._type), ")"),

    // Record types: `name :: T;`, optional fields `name? :: T;`, and an
    // optional trailing open row `...` / `...r` (with or without `;`).
    record_type: ($) =>
      seq(
        "{",
        repeat(field("field", choice($.type_signature, $.optional_type_signature))),
        optional(field("row", $.row_tail)),
        "}",
      ),
